[gd_scene load_steps=2 format=3 uid="uid://b30pmwto2b124"]

[ext_resource type="Script" uid="uid://bsis2kn6e2575" path="res://Scenes/start_screen.gd" id="1_i8r30"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i8r30")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1918.0
offset_bottom = 1080.0
color = Color(0.400698, 0.400698, 0.400698, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -33.0
offset_right = 51.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="2V2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "2V2
"

[node name="4FreeForAll" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "4 Free for all
"

[node name="1V1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "1V1
"

[node name="look thing" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Look thing
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options 
"

[connection signal="button_down" from="VBoxContainer/2V2" to="." method="_on_v_2_button_down"]
[connection signal="button_down" from="VBoxContainer/4FreeForAll" to="." method="_on_free_for_all_button_down"]
[connection signal="button_down" from="VBoxContainer/1V1" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="VBoxContainer/look thing" to="." method="_on_look_thing_button_down"]
[connection signal="button_down" from="VBoxContainer/Quit" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="VBoxContainer/Options" to="." method="_on_options_button_down"]
